--- a/app/xs-app.json
+++ b/app/xs-app.json
@@ -1,17 +1,19 @@
 {
   "welcomeFile": "purchaseorderapp/webapp/",
-  "authenticationMethod": "none",
+  "authenticationMethod": "route",
   "sessionTimeout": 10,
   "pluginMetadataEndpoint": "/metadata",
   "routes": [
     {
       "source": "^/purchaseorderapp/webapp/(.*)",
       "target": "$1",
-      "localDir": "purchaseorderapp/webapp/"
+      "localDir": "purchaseorderapp/webapp/",
+      "authenticationType": "xsuaa"
     },
     {
       "source": "^/(.*)$",
-      "destination": "srv-api"
+      "destination": "srv-api",
+      "authenticationType": "xsuaa"
     }
   ]
 }
