--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@sap/cds": "^7",
     "@sap/cds-hana": "^2",
     "@sap/cds-odata-v2-adapter-proxy": "^1.9.21",
-    "express": "^4"
+    "@sap/xsenv": "^5.1.0",
+    "@sap/xssec": "^3.6.1",
+    "express": "^4",
+    "passport": "^0.7.0"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
@@ -28,6 +31,17 @@
       "db": "hana",
       "credentials": {
         "database": "batman-key"
+      },
+      "auth":{
+        "[production]":{
+          "strategy": "JWT"
+        },
+        "[development]":{
+          "strategy": "mock",
+          "users": {
+           
+          }
+        }
       }
     },
     "hana": {
